--- a/css/style.css
+++ b/css/style.css
@@ -60,74 +60,29 @@ body {
 
 .container {
     margin: 0px auto;
-    max-width: 400px;
+    max-width: 1000px;
 }
 
-
-.parent {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    overflow: auto;   
-}
-
-.block {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 300px;
-       
-}
-.block input,button {
-    font-size: 34px;
-    margin-bottom: 30px;
-
-    border-radius: 6px;
-    border: none;
-}
-.block input {
-    opacity: 45%;
-
-}
-.block button {
-    background-color: lavender;
-    box-shadow: 1px 1px 4px 1px black;
-
+.name_value {
+    text-align: left;
    
-    
 }
-.block button:active {
-
-    opacity: 50%;
-    box-shadow: 0px 0px 0px 0px black;
-}
-.output {
-    height: 70px;
-    font-size: 70px;
+.value {
+    padding-left: 50px;
+    font-size: 50px;
     color: lavender;
 }
-.calcs_list {
-    padding: 0px;
-}
-.calcs_list li {
-    
 
-    font-size: 34px;
-    text-decoration: none;
-    
-    
-    list-style-type: none;
+
+.text_area {
+    resize: none;
+    opacity: 0.5;
+  
 }
 
-.btn_calc {
-    border: 2px solid  black;
-    width: 100%;
+.value_cont {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.link {
-    font-size: 34px;
-}
