--- a/css/style.css
+++ b/css/style.css
@@ -85,4 +85,7 @@ body {
     align-items: center;
     justify-content: space-between;
 }
-
+ #alphabet {
+    display: flex;
+    flex-direction: column;
+ }
