beta_1 of 4 task(поменяны текста, поправлена работа с вхождениями: теперь у нас отображается только символы, которые встретились, переработан формат строки вывода)

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,11 @@ body {
     align-items: center;
     justify-content: space-between;
 }
- #alphabet {
+ #alphabet div {
     display: flex;
     flex-direction: column;
+
+    font-size: 25px;
+    color: lavender;
+    text-align: left;
  }
