--- a/css/style.css
+++ b/css/style.css
@@ -64,86 +64,23 @@ body {
     max-width: 700px;
 }
 
-.name_value {
-    text-align: left;
-   
+.game_board {
+    width: 500px;
+    height: 500px;
+    border-collapse: collapse;
+    border: 0px solid black;
 }
-.value {
-    padding-left: 50px;
-    font-size: 50px;
-    color: lavender;
+.game_board td, tr {
+    border: 0px solid black;
+    padding: 0px;
 }
 
-
-.text_area {
-    resize: none;
-    opacity: 0.5;
-    margin: 0 auto;
-    box-sizing: border-box;
-    padding: 10px;
-    margin-bottom: 50px;
-    border-radius: 20px;
-    font-size: 20px;
-    text-align: left;
-   
-
+.cell {
+    position: relative;
     width: 100%;
-    
+    height: 100%;
+
+    padding: 0px;
+    margin: 0px;
+    border: 1px solid black;
 }
-
-.value_cont {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
- #alphabet div {
-    display: flex;
-    flex-direction: column;
-
-    font-size: 25px;
-    color: lavender;
-    text-align: right;
- }
- @media(max-width: 500px)
- {
-    .container {
-        max-width: 300px;
-    }
-    #alphabet div {
-        text-align: center;
-        font-size: 30px;
-    }
- }
-
-.checks {
-    padding: 0;
-    margin: 0 auto;
-}
-
- .checks li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
- }
-
- .checks li div {
-    text-align: left;
-    list-style-type: none;
-    color: lavender;
-
-    font-size: 30px;
-    
- }
-
- .check_inp {
-    transform: scale(3);
-    outline: none;
- }
- 
- .container_input {
-    margin-right: 0;
-    margin-left: auto;
-    
- }
- 
