--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,16 @@
  
 
 h3 {
-    font-size: 34px;
+    font-size: 45px;
     color: lavender;
     font-family: 'Gilroy';
     font-style: normal;
     font-weight: 700;
 }
 
-h6 {
-    font-size: 14px;
+h5 {
+    font-size: 30px;
+    color: lavender;
     font-family: 'Gilroy';
     font-style: normal;
     font-weight: 700;
@@ -62,11 +63,15 @@ body {
 .container {
     margin: 0 auto;
     max-width: 700px;
+
+    padding: 20px;
 }
 
 .game_board {
     width: 500px;
     height: 500px;
+    margin-bottom: 40px;
+    
     border-collapse: collapse;
     border: 0px solid black;
 }
@@ -85,4 +90,64 @@ body {
     border: 1px solid black;
 
     background-color: bisque;
+}
+.settings {
+    display: flex;
+    flex-direction: column;
+    
+}
+.input_set{
+    opacity: 0.5;
+    font-size: 40px;
+    border-radius: 10px;
+    border: 2px solid grey;
+
+    margin-bottom: 40px;
+
+    text-align: left;
+    padding-left: 10px;
+}
+
+
+
+.settings h5 {
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 40px;
+}
+.btn {
+    font-size: 40px;
+    opacity: 1;
+    background-color: lavender;
+    color: rgb(47, 45, 45);
+
+    border-radius: 10px;
+    border: 3px solid rgb(47, 45, 45);
+
+    margin-bottom: 40px;
+
+}
+
+.btn:hover{
+    scale: 1.05;
+}
+
+
+.game {
+
+    display: none;
+    flex-direction: column;
+}
+
+.statistics_title
+{
+    font-size: 40px;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: rgb(47, 45, 45);
+}
+
+#title_result {
+    display: none;
 }
